Added link to swagger on the browser landingpage

--- a/html/index.html
+++ b/html/index.html
@@ -1,9 +1,11 @@
 <html>
     <head>
-        <title>SigurdAPI</title>
+        <title>Outlinr API</title>
     </head>
     <body>
-        <h1>Hello World!</h1>
-        <p>This is a placeholder.</p>
+        <h1>Outlinr API</h1>
+        <p>Dette er blot en landingsside for browsere.</p>
+        <br />
+        <p><a href="/swagger">Gå til Swagger dokumentationen</a></p>
     </body>
 </html>
